@@ -123,6 +123,7 @@ class JsonListItemConverter(object):
         context_menu.extend(menu_items.clear_previews())
         if self.has_token:
             context_menu.extend(menu_items.editfollow(channel[Keys.ID], channel[Keys.DISPLAY_NAME]))
+            context_menu.extend(menu_items.editblock(channel[Keys.ID], channel[Keys.DISPLAY_NAME]))
         return {'label': channel[Keys.DISPLAY_NAME],
                 'path': kodi.get_plugin_url({'mode': MODES.CHANNELVIDEOS, 'channel_id': channel[Keys.ID]}),
                 'art': the_art({'fanart': video_banner, 'poster': image, 'thumb': image}),
@@ -170,6 +171,7 @@ class JsonListItemConverter(object):
         context_menu.extend(menu_items.go_to_game(channel[Keys.GAME]))
         if self.has_token:
             context_menu.extend(menu_items.editfollow(channel[Keys.ID], channel[Keys.DISPLAY_NAME]))
+            context_menu.extend(menu_items.editblock(channel[Keys.ID], channel[Keys.DISPLAY_NAME]))
         context_menu.extend(menu_items.run_plugin(i18n('play_choose_quality'),
                                                   {'mode': MODES.PLAY, 'name': channel[Keys.NAME], 'channel_id': channel[Keys.ID], 'source': False, 'use_player': True}))
         return {'label': title,
